fixed several wrong words in calendarfiles for consistency

--- a/fy-NL/calendar/chrome/calendar/calendar.properties
+++ b/fy-NL/calendar/chrome/calendar/calendar.properties
@@ -497,15 +497,10 @@ oneWeekForward=Ien wike foar\u00FAt
 gotoToday=Nei hjoed gean
 
 # Task tree, "Due In" column.
-dueInDays1=1 dei
-# Used for "2 days"
-dueInDays2=2 dagen
-# Used for more than 2 days
-dueInDaysN=%1$S dagen
-
-dueInHours1=1 oere
-dueInHours2=2 oeren
-dueInHoursN=%1$S oeren
+# LOCALIZATION NOTE (dueInDays, dueInHours): Semi-colon list of plural
+# forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+dueInDays=#1 dei;#1 dagen
+dueInHours=#1 oere;#1 oeren
 dueInLessThanOneHour=< 1 oere
 
 # LOCALIZATION NOTE (monthInYear):
@@ -558,6 +553,25 @@ datetimeIntervalOnSameDay=%1$S %2$S \u2013 %3$S
 #    %3$S will be replaced with the date of the end date
 #    %4$S will be replaced with the time of the end date
 datetimeIntervalOnSeveralDays=%1$S %2$S \u2013 %3$S %4$S
+
+# LOCALIZATION NOTE (datetimeIntervalTaskWithoutDate):
+# used for task without start and due date
+# (showed only in exported calendar in Html format)
+datetimeIntervalTaskWithoutDate= gjin start- of eindatum
+# LOCALIZATION NOTE (datetimeIntervalTaskWithoutDueDate):
+# used for intervals in task with only start date
+# displayed form is 'start date 5 Jan 2006 13:00'
+# (showed only in exported calendar in Html format)
+#    %1$S will be replaced with the date of the start date
+#    %2$S will be replaced with the time of the start date
+datetimeIntervalTaskWithoutDueDate=startdatum %1$S %2$S
+# LOCALIZATION NOTE (datetimeIntervalTaskWithoutStartDate):
+# used for intervals in task with only due date
+# displayed form is 'due date 5 Jan 2006 13:00'
+# (showed only in exported calendar in Html format)
+#    %1$S will be replaced with the date of the due date
+#    %2$S will be replaced with the time of the due date
+datetimeIntervalTaskWithoutStartDate=eindatum %1$S %2$S
 
 deleteTaskLabel=Taak fuortsmite
 deleteTaskAccesskey=f
