--- a/fy-NL/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/fy-NL/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -21,6 +21,7 @@
 #   Michael B\u00FCttner <michael.buettner@sun.com>
 #   Philipp Kewisch <mozilla@kewis.ch>
 #   Hubert Gajewski <hubert@hubertgajewski.com>, Aviary.pl
+#   Martin Schoeder <mschroeder@mozilla.x-home.org>
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -36,17 +37,25 @@
 #
 # ***** END LICENSE BLOCK *****
 
-repeatDetailsRuleDaily1=elke dei
-repeatDetailsRuleDaily2=om de twa dagen
-repeatDetailsRuleDaily3=elke %1$S dagen
+# LOCALIZATION NOTE (dailyEveryNth):
+# Edit recurrence window -> Recurrence pattern -> Daily repeat rules
+# #1 - number
+# e.g. "every 4 days"
+dailyEveryNth=elke dei;elke #1 dagen
 repeatDetailsRuleDaily4=elke wykdei
 
-repeatDetailsRuleWeekly1=elke %1$S
-repeatDetailsRuleWeekly2=om de twa wiken op %1$S
-repeatDetailsRuleWeekly3=elke %1$S wiken op %2$S
-repeatDetailsRuleWeekly4=elke wike
-repeatDetailsRuleWeekly5=om de twa wiken
-repeatDetailsRuleWeekly6=elke %1$S wiken
+# LOCALIZATION NOTE (weeklyNthOn)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# %1$S - weekday (one or more)
+# #2 - week interval
+# e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
+weeklyNthOn=elke %1$S;elke #2 wiken op %1$S
+
+# LOCALIZATION NOTE (weeklyNthOn)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# #1 - interval
+# e.g. "every 5 weeks"
+weeklyEveryNth=elke wiken;elke #1 wiken
 
 repeatDetailsDay1=snein
 repeatDetailsDay2=moandei
@@ -54,72 +63,164 @@ repeatDetailsDay3=tiisdei
 repeatDetailsDay4=woansdei
 repeatDetailsDay5=tongersdei
 repeatDetailsDay6=freed
-repeatDetailsDay7=snoen
+repeatDetailsDay7=sneon
+
+# LOCALIZATION NOTE (repeatDetailsAnd)
+# Used to show a number of weekdays in a list
+# i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
 repeatDetailsAnd=en
 
-repeatDetailsRuleMonthly=de %1$S %2$S fan elke moanne
-repeatDetailsRuleMonthly2=de %1$S %2$S om de twa moannen
-repeatDetailsRuleMonthly3=de %1$S %2$S van elke %3$S moanne
-repeatDetailsRuleMonthly4=op dei %1$S fan elke moanne
-repeatDetailsRuleMonthly5=op dei %1$S om de twa moannen
-repeatDetailsRuleMonthly6=op dei %1$S fan elke %2$S moanne
-repeatDetailsRuleMonthly7=de lêste dei fan de moanne
-repeatDetailsRuleMonthly8=de lêste dei fan elke oare moanne
-repeatDetailsRuleMonthly9=de lêste dei fan elke %1$S moanne
+# LOCALIZATION NOTE (monthlyNthOfEvery):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# #3 - interval
+# i.e. "the FIRST MONDAY of every 3 months"
+monthlyNthOfEvery=de %1$S %2$S fan elke moanne;de %1$S %2$S fan elke #3 moannen
+
+# LOCALIZATION NOTE (monthlyEveryOfEvery):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - weekday
+# #2 - interval
+# i.e. "every MONDAY of every 3 months" 
+#  more specific: every monday of January, April, July, October
+monthlyEveryOfEvery=elke %1$S fan elke moanne;elke %1$S fan elke #2 moannen
+
+# LOCALIZATION NOTE (monthlyDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "day 3 of every 2 months"
+monthlyDayOfNth=dei %1$S fan elke moanne;dei %1$S fan elke #2 moannen
+
+# LOCALIZATION NOTE (monthlyLastDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "the last day of every 3 months"
+monthlyLastDayOfNth=de l\u00EAste dei fan de moanne; de l\u00EAste dei fan elke #1 moannen
 
 repeatDetailsOrdinal1=earste
 repeatDetailsOrdinal2=twadde
 repeatDetailsOrdinal3=tredde
 repeatDetailsOrdinal4=fjirde
 repeatDetailsOrdinal5=fiifde
-repeatDetailsOrdinal-1=lêste
+repeatDetailsOrdinal-1=l\u00EAste
 
-repeatDetailsRuleYearly1=elke %1$S %2$S
-repeatDetailsRuleYearly2=elke twa jier op %1$S %2$S
-repeatDetailsRuleYearly3=elke %3$S jier op %1$S %2$S
-repeatDetailsRuleYearly4=de %1$S %2$S fan %3$S
-repeatDetailsRuleYearly5=elke twa jier op de %1$S %2$S fan %3$S
-repeatDetailsRuleYearly6=elke %4$S jier op de %1$S %2$S fan %3$S
+# LOCALIZATION NOTE (yearlyNthOn):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - month
+# %2$S - day of month
+# #3 - yearly interval
+# e.g. "every 3 years on December 14"
+yearlyNthOn=elke %1$S %2$S;elke #3 jieren op %1$S %2$S
 
-repeatDetailsMonth1=jannewaris
-repeatDetailsMonth2=febrewaris
-repeatDetailsMonth3=maart
-repeatDetailsMonth4=april
-repeatDetailsMonth5=maaie
-repeatDetailsMonth6=juny
-repeatDetailsMonth7=july
-repeatDetailsMonth8=augustus
-repeatDetailsMonth9=septimber
-repeatDetailsMonth10=oktober
-repeatDetailsMonth11=novimber
-repeatDetailsMonth12=desimber
+# LOCALIZATION NOTE (yearlyNthOnNthOf):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# %3$S - month
+# #4 - number
+# e.g. "the second Monday of every March"
+# e.g  "every 3 years the second Monday of March"
+yearlyNthOnNthOf=de %1$S %2$S fan elke %3$S;elke #4 jieren op de %1$S %2$S fan %3$S
 
-repeatDetailsCount=Fynt %1$S plak\nfanôf %2$S, %3$S kear\nfan %4$S oant %5$S.
-repeatDetailsCountAllDay=Fynt %1$S plak\nfanôf %2$S, %3$S kear.
-repeatDetailsUntil=Fynt %1$S plak\nfan %2$S oant %3$S\nfan %4$S oant %5$S.
-repeatDetailsUntilAllDay=Fynt %1$S plak\nfan %2$S oant %3$S.
-repeatDetailsInfinite=Fynt %1$S plak\nfanôf %2$S\nfan %3$S oant %4$S.
-repeatDetailsInfiniteAllDay=Fynt %1$S plak\nfanôf %2$S.
+# LOCALIZATION NOTE (yearlyNthOfNth):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - weekday
+# %2$S - month
+# #4 - number
+# e.g. "every Thursday of March"
+# e.g  "every 3 years on every Thursday of March"
+yearlyOnEveryNthOfNth=elke %1$S fan %2$S;elke #3 jier op elke %1$S fan %2$S
 
-reminderCustomTitle=%1$S %2$S %3$S %4$S
-reminderTitleAtStartEvent=Op it momint as it barren begjint
-reminderTitleAtStartTask=Op it momint as de taak begjint
-reminderTitleAtEndEvent=Op it momint as it barren eindiget
-reminderTitleAtEndTask=Op it momint as de taak eindiget
-reminderCustomUnitMinute=minuut
-reminderCustomUnitMinutes=minuten
-reminderCustomUnitHour=oere
-reminderCustomUnitHours=oere
-reminderCustomUnitDay=dei
-reminderCustomUnitDays=dagen
-reminderCustomRelationBefore=foardat
-reminderCustomRelationAfter=neidat
-reminderCustomOriginBeginEvent=it barren begjint
-reminderCustomOriginEndEvent=it barren eindiget
-reminderCustomOriginBeginTask=de taak begjint
-reminderCustomOriginEndTask=de taak eindiget
-reminderErrorMaxCountReachedEvent=De selektearre aginda hat in beheining fan %1$S werinnerings per barren.
-reminderErrorMaxCountReachedTask=De selektearre aginda hat in beheining fan %1$S werinnerings per taak.
+repeatDetailsMonth1=Jannewaris
+repeatDetailsMonth2=Febrewaris
+repeatDetailsMonth3=Maart
+repeatDetailsMonth4=April
+repeatDetailsMonth5=Maaie
+repeatDetailsMonth6=Juny
+repeatDetailsMonth7=July
+repeatDetailsMonth8=Augustus
+repeatDetailsMonth9=Septimber
+repeatDetailsMonth10=Oktober
+repeatDetailsMonth11=Novimber
+repeatDetailsMonth12=Desimber
+
+# LOCALIZATION NOTE (repeatCount):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# #5 - event occurence times: number
+# e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+#  from 5:00 PM to 6:00 PM"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times
+#  from 5:00 PM to 6:00 PM"
+repeatCount=Bard %1$S\neffektyf %2$S foar #5 kear\nfan %3$S oant %4$S.;Bard %1$S\neffektyf %2$S foar #5 kear\nfan %3$S oant %4$S.
+
+# LOCALIZATION NOTE (repeatCountAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# #3 - event occurence times: number
+# e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times"
+repeatCountAllDay=Bard %1$S\neffektyf %2$S foar #3 kear.;Bard %1$S\neffektyf %2$S foar #3 kear.
+
+# LOCALIZATION NOTE (repeatDetailsUntil):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# %4$S - event start time (e.g. hh:mm (PM/AM))
+# %5$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with repeatDetailsRuleWeekly2:
+# "Occurs every other week on Sunday and Friday
+#  effective 1/1/2009 until 1/1/2010 
+#  from 5:00 PM to 6:00 PM"
+repeatDetailsUntil=Bard %1$S\neffektyf %2$S oant %3$S\nfan %4$S oant %5$S.
+# LOCALIZATION NOTE (repeatDetailsUntilAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009 until 1/1/2010"
+repeatDetailsUntilAllDay=Bard %1$S\neffektyf %2$S oant %3$S.
+# LOCALIZATION NOTE (repeatDetailsInfinite):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with repeatDetailsRuleMonthly6:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009
+#  from 5:00 PM to 6:00 PM"
+repeatDetailsInfinite=Bard %1$S\neffektyf  %2$S\nfan %3$S oant %4$S.
+# LOCALIZATION NOTE (repeatDetailsInfiniteAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009"
+repeatDetailsInfiniteAllDay=Bard %1$S\neffektyf %2$S.
+
+# LOCALIZATION NOTE (ruleTooComplex):
+# This string is shown in the reminder details area if our code can't handle the
+# complexity of the recurrence rule yet.
+ruleTooComplex=Klik hjir foar details
+
 newEvent=Nij barren
 newTask=Nije taak
 
@@ -133,8 +234,8 @@ summaryDueTaskLabel=Ferrin:
 
 # Attach File Dialog
 selectAFile=Selektearje de bestannen om te keppeljen
-removeCalendarsTitle=Taheaksels fuortsmite
-removeCalendarsText=Wolle jo echt %1$S taheaksels fuortsmite?
+removeCalendarsTitle=Bylagen fuortsmite
+removeCalendarsText=Wolle jo echt %1$S bylagen fuortsmite?
 
 # Recurrence Dialog Widget Order
 # LOCALIZATION NOTE: You can change the order of below params
