--- a/fy-NL/calendar/installer/override.properties
+++ b/fy-NL/calendar/installer/override.properties
@@ -41,11 +41,11 @@
 # Accesskeys are defined by prefixing the letter that is to be used for the
 # accesskey with an ampersand (e.g. &).
 
-# Do not replace $(^NameDA) or $(^Name) with a custom string.
-
-# Do not change $(^NameDA) to $(^Name) or $(^Name) to $(^NameDA). NameDA allows
-# Name to contain an ampersand (e.g. DA stands for double ampersand) and
-# prevents the letter following the ampersand being used as an accesskey.
+# Do not replace $BrandShortName, $BrandFullName, or $BrandFullNameDA with a
+# custom string and always use the same one as used by the en-US files.
+# $BrandFullNameDA allows the string to contain an ampersand (e.g. DA stands
+# for double ampersand) and prevents the letter following the ampersand from
+# being used as an accesskey.
 
 # You can use \n to create a newline in the string but only when the string
 # from en-US contains a \n.
@@ -55,8 +55,8 @@
 # and end of a strong enclose the add and additional double quote to the
 # beginning and end of the string (e.g. ""This will include quotes"").
 
-SetupCaption=$(^Name) Ynstallaasje
-UninstallCaption=$(^Name) De-ynstallaasje
+SetupCaption=$BrandFullName Ynstallaasje
+UninstallCaption=$BrandFullName De-ynstallaasje
 BackBtn=< &Tebek
 NextBtn=&Folgjende >
 AcceptBtn=Ik &akseptearje de Lisinsje-oerienkomst
@@ -71,15 +71,15 @@ ClickNext=Kies Folgjende om fierder te gean.
 ClickInstall=Kies Ynstallearje om de ynstallaasje te starten.
 ClickUninstall=Kies De-ynstallearje om de de-ynstallaasje te starten.
 Completed=Foltôge
-LicenseTextRB=Lês de lisinsje mei omtinken troch foardat jo $(^NameDA) ynstallearje. As jo de lisinsje oerienkomst akseptearje, selektearje dan de earste opsje hjirûnder. $_CLICK
+LicenseTextRB=Lês de lisinsje mei omtinken troch foardat jo $BrandFullNameDA ynstallearje. As jo de lisinsje oerienkomst akseptearje, selektearje dan de earste opsje hjirûnder. $_CLICK
 ComponentsText=Fink de ûnderdielen oan dy't jo ynstallearje wolle en fink de ûnderdielen út dy't jo net ynstallearje wolle. $_CLICK
 ComponentsSubText2_NoInstTypes=Selektearje te ynstallearjen ûnderdielen:
-DirText=Ynstallaasje sil $(^NameDA) ynstallearje yn de folgjende map. Om yn in oare map te ynstallearjen, klik Blêdzje en selektearje in oare map. $_CLICK
+DirText=Ynstallaasje sil $BrandFullNameDA ynstallearje yn de folgjende map. Om yn in oare map te ynstallearjen, klik Blêdzje en selektearje in oare map. $_CLICK
 DirSubText=Doelmap
-DirBrowseText=Selektearje de map om $(^NameDA) yn te ynstallearjen:
+DirBrowseText=Selektearje de map om $BrandFullNameDA yn te ynstallearjen:
 SpaceAvailable="Beskikbere skiifromte: "
 SpaceRequired="Nedige skiifromte: "
-UninstallingText=$(^NameDA) sil de-ynstallearre wurde út de folgjende map. $_CLICK
+UninstallingText=$BrandFullNameDA sil de-ynstallearre wurde út de folgjende map. $_CLICK
 UninstallingSubText=De-ynstallaasje út:
 FileError=Flater by it iepenjen fan bestân om te skriuwen: \r\n\r\n$0\r\n\r\nKlik Ofbrekke om de ynstallaasje te stoppen,\r\nBesykje it noch in kear op 'e nij, of\r\nNegearje om dit bestân oer te slaan.
 FileError_NoIgnore=Flater by it iepenjen fan bestân om te skriuwen: \r\n\r\n$0\r\n\r\nKlik Op 'e nij om it noch in kear te besykjen, of\r\nAnnulearje om de ynstallaasje ôf te brekken.
@@ -93,8 +93,8 @@ CouldNotLoad="Koe net lade: "
 CreateFolder="Meitsje Map: "
 CreateShortcut="Meitsje programma-ikoantsjes: "
 CreatedUninstaller="De-ynstallearder makke: "
-Delete="Smit bestân fuort: "
-DeleteOnReboot="Smit fuort by it op 'e nij opstarten: "
+Delete="Smyt bestân fuort: "
+DeleteOnReboot="Smyt fuort by it op 'e nij opstarten: "
 ErrorCreatingShortcut="Flater mei oanmeitsjen programma-ikoantsje: "
 ErrorCreating="Flater mei it meitsjen fan: "
 ErrorDecompressing=Flater mei útpakken gegevens! Korruptearre ynstallearder?
