fixed several wrong words in domfiles for consistency

--- a/fy-NL/dom/chrome/plugins.properties
+++ b/fy-NL/dom/chrome/plugins.properties
@@ -11,7 +11,7 @@ installhelp_label=Hulp by it ynstallearjen fan ynstekkers is beskikber op
 filename_label=Best\u00E2nsnamme:
 mimetype_label=MIME-soart
 description_label=Beskriuwing
-suffixes_label=Taheaksels
+suffixes_label=Bylagen
 enabled_label=Warber
 yes_label=Ja
 no_label=Nee
