--- a/fy-NL/dom/chrome/xslt/xslt.properties
+++ b/fy-NL/dom/chrome/xslt/xslt.properties
@@ -35,37 +35,37 @@
 #
 # ***** END LICENSE BLOCK *****
 
-1  = Untleden fan in XSLT-stylbl\u00EAd mislearre.
+1  = Untleden fan in XSLT-stylblêd mislearre.
 2  = Untleden fan in XPath-ekspressie mislearre.
 3  = 
 4  = XSLT-transformaasje mislearre.
 5  = Unjildige XSLT/XPath-funksje.
-6  = XSLT-stylbl\u00EAd befat (mooglik) in rekursje.
+6  = XSLT-stylblêd befat (mooglik) in rekursje.
 7  = Attribuutwearde illegaal yn XSLT 1.0.
 8  = In NodeSet as resultaat fan in XPath-ekspressie ferwachte.
-9  = XSLT-transformaasje is \u00F4fbrutsen troch <xsl:message>.
-10 = In netwerkflater is bart tiidens it laden fan in XSLT-stylbl\u00EAd:
-11 = In XSLT-stylbl\u00EAd hat gjin XML-mimetype:
-12 = In XSLT-stylbl\u00EAd ymporteart of befat sichsels direkt of yndirekt:
+9  = XSLT-transformaasje is ôfbrutsen troch <xsl:message>.
+10 = In netwerkflater is bart tiidens it laden fan in XSLT-stylblêd:
+11 = In XSLT-stylblêd hat gjin XML-mimetype:
+12 = In XSLT-stylblêd ymporteart of befat sichsels direkt of yndirekt:
 13 = In XPath-functie is oanroppen mei in ferkeard tal argumenten.
-14 = In \u00FBnbekende XPath-taheakselfunksje is oanroppen.
+14 = In ûnbekende XPath-bylagefunksje is oanroppen.
 15 = XPath-parseflater: ')' ferwachte:
-16 = XPath-parseflater: \u00FBnjildige as:
+16 = XPath-parseflater: ûnjildige as:
 17 = XPath-parseflater: Namme- of nodetypetest ferwachte:
 18 = XPath-parseflater: ']' ferwachte:
-19 = XPath-parseflater: \u00FBnjildige namme foar fariabele:
-20 = XPath-parseflater: \u00FBnferwacht ein fan ekspresje:
+19 = XPath-parseflater: ûnjildige namme foar fariabele:
+20 = XPath-parseflater: ûnferwacht ein fan ekspresje:
 21 = XPath-parseflater: operator ferwachte:
-22 = XPath-parseflater: net \u00F4fsluten tekst:
-23 = XPath-parseflater: \u00FBnferwachte ':':
-24 = XPath-parseflater: \u00FBnferwachte '!', \u00FBntkenning is net():
-25 = XPath-parseflater: \u00FBnjildich teken f\u00FBn:
+22 = XPath-parseflater: net ôfsluten tekst:
+23 = XPath-parseflater: ûnferwachte ':':
+24 = XPath-parseflater: ûnferwachte '!', ûntkenning is net():
+25 = XPath-parseflater: ûnjildich teken fûn:
 26 = XPath-parseflater: binaire operator ferwachte:
-27 = It laden fan in XSLT-stylbl\u00EAd is blokkearre om befeiligingsredenen.
+27 = It laden fan in XSLT-stylblêd is blokkearre om befeiligingsredenen.
 28 = Evaluaasje fan foute ekspresje.
-29 = Unbalansearre krullende b\u00E2n.
+29 = Unbalansearre krullende bân.
 30 = Makket in elemint mei in foute QName.
-31 = Fariabele binding skermt fariabele binding yn itselde sjabloan \u00F4f.
+31 = Fariabele binding skermt fariabele binding yn itselde sjabloan ôf.
 
-LoadingError = Flater tiidens laden fan stylbl\u00EAd: %S
+LoadingError = Flater tiidens laden fan stylblêd: %S
 TransformError = Flater tiidens XSLT-transformaasje: %S
