fixed several wrong words in editorfiles for consistency

--- a/fy-NL/editor/ui/chrome/composer/editor.properties
+++ b/fy-NL/editor/ui/chrome/composer/editor.properties
@@ -23,14 +23,14 @@ Publish=Publisearje
 PublishPage=Side publisearje
 DontPublish=Net publisearje
 SavePassword=Wachtwurdbehearder br\u00FBke om dit wachtwurd te bewarjen
-CorrectSpelling=(stavering korrizearje)
+CorrectSpelling=(stavering korrizjearje)
 NoSuggestedWords=(gjin foarstellen)
 NoMisspelledWord=Gjin ferkeard spelde wurden
 CheckSpellingDone=Staveringshifker be\u00EBinige
 CheckSpelling=Staveringshifker
 InputError=Flater
 Alert=Warsk\u00F4ging
-CantEditFramesetMsg=Composer kin HTML-framesets of siden mei inline frames net bewurkje. Probear foar framesets de side foar elk frame apart te bewurkjen. Bewarje foar siden mei iframes in kopie fan de side en smit de <iframe>-koade fuort.
+CantEditFramesetMsg=Composer kin HTML-framesets of siden mei inline frames net bewurkje. Probearje foar framesets de side foar elk frame apart te bewurkjen. Bewarje foar siden mei iframes in kopy fan de side en smyt de <iframe>-koade fuort.
 CantEditMimeTypeMsg=Dit soarte side kin net bewurke wurde.
 CantEditDocumentMsg=Dizze side kin net bewurke wurde om in \u00FBnbekende reden.
 BeforeClosing=foar it sluten
@@ -46,11 +46,11 @@ SaveFileFailed=Best\u00E2n bewarje mislearre!
 FileNotFound=%file% net f\u00FBn.
 SubdirDoesNotExist=De submap "%dir%" bestiet net op dizze webstee of de best\u00E2nsnamme "%file%" is al yn gebr\u00FBk troch in oare submap.
 FilenameIsSubdir=De best\u00E2nsnamme "%file%" is al yn gebr\u00FBk troch in oare submap.
-ServerNotAvailable=De tsjinner is net beskikber. Kontrolear jo ferbining en probearje it letter op 'e nij.
+ServerNotAvailable=De tsjinner is net beskikber. Kontrolearje jo ferbining en probearje it letter op 'e nij.
 Offline=Jo wurkje no s\u00FBnder ferbining. Klik op it ikoantsje yn de rjochter\u00FBnderhoeke fan in finster om ferbining te meitsjen.
 DiskFull=Der is net gen\u00F4ch \u00FBnth\u00E2ld beskikber om it best\u00E2n "%file%" te bewarjen.
 NameTooLong=De best\u00E2nsnamme of submapnamme is te lang.
-AccessDenied=Jo hawwe gjin tastemming om te publisearje nei dizze lokaasje.
+AccessDenied=Jo hawwe gjin tastemming om te publisearjen nei dizze lokaasje.
 UnknownPublishError=Der is in \u00FBnbekende publikaasjeflater bard.
 PublishFailed=Publisearjen mislearre.
 PublishCompleted=Publisearjen folt\u00F4ge.
@@ -67,7 +67,7 @@ SendPageReason=foardat dizze side ferstjoert wurd
 Send=Ferstjoere
 ## LOCALIZATION NOTE (PublishProgressCaption, PublishToSite, AbandonChanges): Don't translate %title%
 PublishProgressCaption=Publisearje: %title%
-PublishToSite=Publisearje op de sode: %title%
+PublishToSite=Publisearje op de side: %title%
 AbandonChanges=Net-bewarre wizigings fan "%title%" fuortsmite en de side op 'e nij lade?
 DocumentTitle=Sidetitel
 NeedDocTitle=Fier in titel yn foar de aktuele side.
@@ -75,94 +75,94 @@ DocTitleHelp=Dit ydentifisearret de side yn de finstertitel en de bl\u00EAdwizer
 CancelPublishTitle=Publisearjen annulearje?
 ## LOCALIZATION NOTE: "Continue" in this sentence must match the text for
 ## the CancelPublishContinue key below
-CancelPublishMessage=Annuleren terwijl het publiceren in uitvoering is kan ertoe leiden dat uw bestand niet volledig wordt overgebracht. Wilt u doorgaan of annuleren?
-CancelPublishContinue=Doorgaan
-MissingImageError=Kies of voer een afbeelding van het type gif, jpg of png in.
-EmptyHREFError=Kies een locatie om een nieuwe koppeling te maken.
-LinkText=Koppelingstekst
-LinkImage=Koppelingsafbeelding
-MixedSelection=[Gemixte selectie]
-Mixed=(gemixt)
-EnterLinkText=Voer een tekst in voor het weergeven van de koppeling:
+CancelPublishMessage=Annulearjen wylst it publisearjen dwaande is kin liede ta dat jo best\u00E2n net folslein oerbracht wurd. Wolle jo trochgean of annulearje?
+CancelPublishContinue=Trochgean
+MissingImageError=Kies of fier in \u00F4fbylding fan it type gif, jpg of png yn.
+EmptyHREFError=Kies in lokaasje om in nije keppeling te meitsjen.
+LinkText=Keppelingstekst
+LinkImage=Keppelings\u00F4fbylding
+MixedSelection=[Mingde seleksje]
+Mixed=(mingd)
+EnterLinkText=Fier in tekst yn foar it werjaan fan de keppeling:
 EnterLinkTextAccessKey=T
-EmptyLinkTextError=Voer tekst in voor deze koppeling.
-EditTextWarning=Dit vervangt een bestaande inhoud.
+EmptyLinkTextError=Fier tekst yn foar dizze keppeling.
+EditTextWarning=Dit ferfangt in besteande ynh\u00E2ld.
 #LOCALIZATION NOTE (ValidateNumber):Don't translate: %n% %min% %max%
-ValidateRangeMsg=Het getal dat u hebt ingevoerd (%n%) valt buiten het toegestane bereik.
-ValidateNumberMsg=Voer een nummer in tussen %min% en %max%.
-MissingAnchorNameError=Voer een naam in voor deze ankerverwijzing.
+ValidateRangeMsg=It getal dat jo ynfierd hawwe (%n%) falt b\u00FBten it tasteane berik.
+ValidateNumberMsg=Fier in n\u00FBmer yn tusken %min% en %max%.
+MissingAnchorNameError=Fier in namme yn foar dizze ankerferwizing.
 #LOCALIZATION NOTE (DuplicateAnchorNameError): Don't translate %name%
-DuplicateAnchorNameError="%name%" bestaat al op deze pagina. Kies een andere naam.
-BulletStyle=Bolletjes
-SolidCircle=Opgevulde cirkel
-OpenCircle=Open circel
-SolidSquare=Dicht vierkant
-NumberStyle=Nummerstijl
-Automatic=Automatisch
+DuplicateAnchorNameError="%name%" bestiet al op dizze side. Kies in oare namme.
+BulletStyle=Boltsjes
+SolidCircle=Tichte sirkel
+OpenCircle=Iepen sirkel
+SolidSquare=Ticht fjouerkant
+NumberStyle=N\u00FBmerstyl
+Automatic=Automatysk
 Style_1=1, 2, 3...
 Style_I=I, II, III...
 Style_i=i, ii, iii...
 Style_A=A, B, C...
 Style_a=a, b, c...
 Pixels=pixels
-Percent=procent
-PercentOfCell=% van cel
-PercentOfWindow=% van venster
-PercentOfTable=% van tabel
-untitled=geen titel
-ShowToolbar=Werkbalk weergeven
-HideToolbar=Werkbalk verbergen
-ImapError=Niet mogelijk de afbeelding te laden
-ImapCheck=\nSelecteer een nieuwe locatie (URL) en probeer opnieuw.
-SaveToUseRelativeUrl=Relatieve URL\u2019s kunnen alleen worden gebruikt op pagina\u2019s die zijn opgeslagen
-NoNamedAnchorsOrHeadings=(Geen ankerverwijzingen of koppen op deze pagina)
+Percent=prosint
+PercentOfCell=% fan sel
+PercentOfWindow=% fan finster
+PercentOfTable=% fan tabel
+untitled=gjin titel
+ShowToolbar=Arkbalke werjaan
+HideToolbar=Arkbalke ferstoppe
+ImapError=Net mooglik de \u00F4fbylding te laden
+ImapCheck=\nSelektearje in nije lokaasje (URL) en probearje op 'e nij.
+SaveToUseRelativeUrl=Relative URL\u2019s kinne allinnich br\u00FBkt wurde op siden dy't bewarre binne
+NoNamedAnchorsOrHeadings=(Gjin ankerferwijzings of koppen op dizze side)
 TextColor=Tekstkleur
-HighlightColor=Markeringskleur
-PageColor=Pagina-achtergrondkleur
-BlockColor=Blokachtergrondkleur
-TableColor=Tabelachtergrondkleur
-CellColor=Celachtergrondkleur
-TableOrCellColor=Tabel- of celkleur
-LinkColor=Koppelingstekstkleur
-ActiveLinkColor=Actievekoppelingskleur
-VisitedLinkColor=Bezochtekoppelingskleur
-NoColorError=Klik op een kleur of voer een geldige HTML-kleurcode in
+HighlightColor=Markearingskleur
+PageColor=Side-achtergr\u00FBnkleur
+BlockColor=Blokachtergr\u00FBnkleur
+TableColor=Tabelachtergr\u00FBnkleur
+CellColor=Selachtergr\u00FBnkleur
+TableOrCellColor=Tabel- of selkleur
+LinkColor=Keppelingstekstkleur
+ActiveLinkColor=Aktivekeppelingskleur
+VisitedLinkColor=Besochtekeppelingskleur
+NoColorError=Klik op in kleur of fier in jildige HTML-kleurkoade yn
 Table=Tabel
-TableCell=Tabelcel
-NestedTable=Geneste tabel
-HLine=Horizontale lijn
-Link=Koppeling
-Image=Afbeelding
-ImageAndLink=Afbeelding en koppeling
-NamedAnchor=Ankerverwijzing
-List=Lijst
-ListItem=Lijstitem
+TableCell=Tabelsel
+NestedTable=Ynboude tabel
+HLine=Horisontale line
+Link=Keppeling
+Image=Ofbylding
+ImageAndLink=Ofbylding en keppeling
+NamedAnchor=Ankerferwizing
+List=List
+ListItem=Listitem
 Form=Formulier
-InputTag=Formulierveld
-InputImage=Formulierafbeelding
-TextArea=Tekstgebied
-Select=Selectielijst
+InputTag=Formulierfjild
+InputImage=Formulier\u00F4fbylding
+TextArea=Tekstgebiet
+Select=Seleksjelist
 Button=Knop
 Label=Label
-FieldSet=Veldverzameling
-Tag=Code
-MissingSiteNameError=Voer een naam in voor deze publicatiewebsite.
-MissingPublishUrlError=Voer een locatie in om deze pagina te publiceren.
-MissingPublishFilename=Voer een bestandsnaam in voor de huidige pagina.
+FieldSet=Fjildsammeling
+Tag=Koade
+MissingSiteNameError=Fier in namme yn foar dizze publikaasjewebstee.
+MissingPublishUrlError=Fier in lokaasje yn om dizze side te publisearje.
+MissingPublishFilename=Fier in best\u00E2nsnamme yn foar de aktuele side.
 #LOCALIZATION NOTE (DuplicateSiteNameError): Don't translate %name%
-DuplicateSiteNameError="%name%" bestaat al. Kies een andere websitenaam.
-AdvancedProperties=Geavanceerde eigenschappen...
-AdvancedEditForCellMsg=Geavanceerd bewerken is niet beschikbaar als meerdere cellen zijn geselecteerd
+DuplicateSiteNameError="%name%" bestiet al. Kies in oare websteenamme.
+AdvancedProperties=Avansearre eigenskippen...
+AdvancedEditForCellMsg=Avanseard bewurkje is net beskikber as mear sellen selektearre binne
 # LOCALIZATION NOTE (ObjectProperties):Don't translate "%obj%" it will be replaced with one of above object nouns
-ObjectProperties=%obj%-eigenschappen...
+ObjectProperties=%obj%-eigenskippen...
 # LOCALIZATION NOTE This character must be in the above string and not confict with other accesskeys in Format menu
-ObjectPropertiesAccessKey=c
+ObjectPropertiesAccessKey=k
 # LOCALIZATION NOTE (JoinSelectedCells): This variable should contain the "tablejoincells.accesskey" 
 # letter as defined in editorOverlay.dtd
-JoinSelectedCells=Geselecteerde cellen samenvoegen
+JoinSelectedCells=Selektearre sellen gearfoegje
 # LOCALIZATION NOTE (JoinCellToRight): This variable should contain the "tablejoincells.accesskey" 
 # letter as defined in editorOverlay.dtd
-JoinCellToRight=Samenvoegen met rechtercel
+JoinCellToRight=Gearfoegje mei rjochtersel
 JoinCellAccesskey=r
 # LOCALIZATION NOTE (TableSelectKey): DONT_TRANSLATE
 TableSelectKey=Ctrl+
@@ -170,31 +170,31 @@ TableSelectKey=Ctrl+
 XulKeyMac=Cmd+
 # LOCALIZATION NOTE (Del): DONT_TRANSLATE
 Del=Del
-Delete=Verwijderen
-DeleteCells=Cellen verwijderen
-DeleteTableTitle=Verwijder rijen of kolommen
-DeleteTableMsg=Verminderen van het aantal rijen of kolommen resulteert in het verwijderen van de tabelcellen en hun inhoud. Weet u zeker dat u dit wilt doen?
-Clear=Wissen
+Delete=Fuortsmite
+DeleteCells=Sellen fuortsmite
+DeleteTableTitle=Rigen of kolommen fuortsmite
+DeleteTableMsg=Ferminderjen fan it oantal rigen of kolommen risselteart yn it fuortsmiten fan de tabelsellen en hun ynh\u00E2ld. Witte jo seker dat jo dit dwaan wolle?
+Clear=Wisse
 #Mouse actions
-Click=Klikken
-Drag=Slepen
-Unknown=Onbekend
+Click=Klikke
+Drag=Sleepjen
+Unknown=Unbekend
 #
 # LOCALIZATION NOTE "RemoveTextStylesAccesskey" is used for both
 #  menu items: "RemoveTextStyles" and "StopTextStyles"
 RemoveTextStylesAccesskey=e
-RemoveTextStyles=Alle tekststijlen verwijderen
-StopTextStyles=Tekststijlen stoppen
+RemoveTextStyles=Alle tekststilen fuortsmite
+StopTextStyles=Tekststilen stoppe
 #
 # LOCALIZATION NOTE "RemoveLinksAccesskey" is used for both
 #  menu items: "RemoveLinks" and "StopLinks"
-RemoveLinksAccesskey=o
-RemoveLinks=Koppelingen verwijderen
-StopLinks=Koppeling stoppen
+RemoveLinksAccesskey=e
+RemoveLinks=Ksppelings fuortsmite
+StopLinks=Keppeling stoppe
 #
-NoFormAction=Het wordt aangeraden een actie voor dit formulier in te voeren. Zelfpostende formulieren zijn een geavanceerde techniek die misschien niet consistent in alle browsers werkt.
-NoAltText=Als de afbeelding relevant is voor de inhoud van het document, moet u een alternatieve tekst opgeven die verschijnt in tekstbrowsers, en verschijnt in andere browsers wanneer de afbeelding wordt geladen of het laden van afbeeldingen is uitgeschakeld.
+NoFormAction=It wurdt oanrikkemandearre in aksje foar dit formulier yn te fieren. Selspostende formulieren binne in avansearre technyk dy't miskien net konsistint yn alle browsers wurket.
+NoAltText=As de \u00F4fbylding relevant is foar de ynh\u00E2ld fan it dokumint, moatte jo in alternative tekst opjaan dy't ferskynt yn tekstbrowsers, en ferskynt yn oare browsers wannear de \u00F4fbylding laden wurdt of it laden fan \u00F4fbyldings \u00FAtskeakele is.
 #
-NoHeadTag=De HTML-bron kon niet worden teruggeconverteerd naar het document omdat de vereiste <head>-code mist. Voeg deze toe.
-NoBodyTag=De HTML-bron kon niet worden teruggeconverteerd naar het document omdat de vereiste <body>-code mist. Voeg deze toe.
-NoLinksToCheck=Er zijn geen elementen met koppelingen om te controleren
+NoHeadTag=De HTML-boarne koe net weromkonfertearre wurde nei it dokumint, omdat de nedige <head>-koade mist. Foegje dizze ta.
+NoBodyTag=De HTML-boarne koe net weromkonfertearre wurde nei it dokumint, omdat de nedige <body>-koade mist. Foegje dizze ta.
+NoLinksToCheck=Der binne gjin eleminten mei keppeling om te kontrolearjen
