fixed several wrong words in securityfiles for consistency

--- a/fy-NL/security/manager/chrome/pipnss/pipnss.properties
+++ b/fy-NL/security/manager/chrome/pipnss/pipnss.properties
@@ -305,14 +305,14 @@ VerifyAnyCA_p=CA
 VerifiedTrue=wier
 VerifiedFalse=net wier
 PK11BadPassword=It ynfierde wachtwurd is net korrekt.
-SuccessfulP12Backup=It meitsjen fan reservekopie\u00EBn fan jo befeiligingssertifika(a)t(en) en privee-kaai(en) is mislearre.
+SuccessfulP12Backup=It meitsjen fan reservekopyen fan jo befeiligingssertifika(a)t(en) en privee-kaai(en) is mislearre.
 SuccessfulP12Restore=It werstellen fan jo befeiligingssertifika(a)t(en) en privee-kaai(en) is goed gien.
 PKCS12PasswordInvalid=Koe it PKCS #12-best\u00E2n net \u00FBntsiferje. Is it troch jo ynfierde wachtwurd misskien net korrekt?
 PKCS12DecodeErr=It \u00FBntsiferjen fan dit best\u00E2n is mislearre. It is net yn de PKCS #12-opmaak kodearre, is skansjearre of it troch jo ynfierde wachtwurd is net korrekt.
 PKCS12UnknownErrRestore=It werstellen fan it PKCS #12-best\u00E2n is om \u00FBnbekende redenen mislearre.
-PKCS12UnknownErrBackup=It meitsjen fan in reservekopie fan it PKCS #12-best\u00E2n is om \u00FBnbekende redenen mislearre.
+PKCS12UnknownErrBackup=It meitsjen fan in reservekopy fan it PKCS #12-best\u00E2n is om \u00FBnbekende redenen mislearre.
 PKCS12UnknownErr=De PKCS #12-ferwurking is om \u00FBnbekende redenen mislearre.
-PKCS12InfoNoSmartcardBackup=It is net mooglik om in reservekopie te meitsjen fan sertifikaten die op in befeiligingsapparaat, lykas in smart card, stean.
+PKCS12InfoNoSmartcardBackup=It is net mooglik om in reservekopy te meitsjen fan sertifikaten die op in befeiligingsapparaat, lykas in smart card, stean.
 PKCS12DupData=It sertifikaat en de priv\u00E9-kaai bestean al op it befeiligingsapparaat.
 AddModulePrompt=Witte jo seker dat jo dizze befeiligingsmodule ynstallearje wolle?
 AddModuleName=Modulenamme: %S
@@ -325,9 +325,9 @@ DelModuleWarning=Witte jo seker dat jo dizze befeiligingsmodule fuortsmite wolle
 DelModuleError=Kin module net fuortsmite
 DelModuleIntSuccess=Ynterne befeiligingsmodule s\u00FAksesfol fuortsmiten
 DelModuleExtSuccess=Eksterne befeiligingsmodule s\u00FAksesfol fuortsmiten
-ForcedBackup1=Jo kin it beste in mei in wachtwurd beskerme reservekopie meitsje fan jo nije befeiligingssertifikaat en de byhearende priee-kaai.
-ForcedBackup2=As jo letter de tagong ta jo privee-kaai ferlieze troch jo persoanlike befeiligingswachtwurd te ferjitten of troch best\u00E2nsskansearring, kinne jo dizze privee-kaai en it sertifikaat werstelle mei behulp fan dizze reservekopie.
-ForcedBackup3=Klik op OK om in kopie te meitsjen. Bewarje as't mooglik is jo reservekopie op in diskette dy't jo op in feilig plak bewarje.
+ForcedBackup1=Jo kin it beste in mei in wachtwurd beskerme reservekopy meitsje fan jo nije befeiligingssertifikaat en de byhearende priee-kaai.
+ForcedBackup2=As jo letter de tagong ta jo privee-kaai ferlieze troch jo persoanlike befeiligingswachtwurd te ferjitten of troch best\u00E2nsskansearring, kinne jo dizze privee-kaai en it sertifikaat werstelle mei behulp fan dizze reservekopy.
+ForcedBackup3=Klik op OK om in kopy te meitsjen. Bewarje as't mooglik is jo reservekopy op in diskette dy't jo op in feilig plak bewarje.
 UnknownCertIssuer=(Unbekende \u00FAtjouwer)
 UnknownCertOrg=(Unbekende organisaasje)
 AVATemplate=%S = %S
@@ -377,7 +377,7 @@ CrlImportFailureNotYetValid=De CRL is noch net jildich. Kontrolear jo systeemklo
 CrlImportFailureNetworkProblem=It opheljen fan de CRL is mislearre fanwege netwurkproblemen.
 CrlImportFailureReasonUnknown=Flater tiidens it ymportearjen fan de CRL nei de lokale gegevensbank. Flaterkoade:
 CrlImportFailure2=Freegje jo systeembehearder om assistinsje.
-NSSInitProblemX=Kin de befeiligingskomponint fan de browser net ynisjalisearje. De meast warskienlike oarsaak is problemen mei bestannen yn de profielmap fan jo browser. Kontrolearje oft dizze map gjin l\u00EAs-/skriuwbeheinings hat en jo hurde skiif net fol of hast fol is. It wurdt oanr\u00EAt de browser \u00F4f te sluten en it probleem op te lossen. As jo trochgean mei dizze sesje is it mooglik dat jo net korrekt browsergedrach sjogg by tagong ta de befeiligingsmooglikheden.
+NSSInitProblemX=Kin de befeiligingskomponint fan de browser net ynisjalisearje. De meast warskienlike oarsaak is problemen mei bestannen yn de profielmap fan jo browser. Kontrolearje oft dizze map gjin l\u00EAs-/skriuwbeheinings hat en jo hurde skiif net fol of hast fol is. It wurdt oanrikkemandearre de browser \u00F4f te sluten en it probleem op te lossen. As jo trochgean mei dizze sesje is it mooglik dat jo net korrekt browsergedrach sjogg by tagong ta de befeiligingsmooglikheden.
 ProfileSwitchSocketsStillActive=De bewurking kin net folt\u00F4ge wurde fanwege in ynterne flater. Befeilige netwurkkommunikaasje is net korrekt \u00F4fsluten.
 ProfileSwitchCryptoUIActive=Dizze bewurking is oop dit stuit net mooglik. Meitsje de bewurking \u00F4f dy't om jo oandacht freget yn ien fan de oare iepen skermen.
 VerifyExpired=<Ferr\u00FBn>
@@ -400,7 +400,7 @@ CaCertExists=Dit sertifikaat is al ynstallearre as in sertifikaasje-autoriteit.
 NotACACert=Dit is gjin sertifikaasje-autoriteit-sertifikaat, dus it kin net ymportearre wurde yn de sertifikaasje-autoriteitenlist.
 NotImportingUnverifiedCert=Dit sertifikaat kin net ferifiearre wurde en sil net ymportearre wurde. De sertifikaat\u00FAtjouwer kin net bekend of net fertrouwd w\u00EAze, it sertifikaat kin ferr\u00FBn of ynl\u00FBkt w\u00EAze, of it sertifikaat is noch net goedkard.
 UserCertIgnoredNoPrivateKey=Dit persoanlike sertifikaat kin net ynstallearre wurde, omdat jo de korrespondearjende privekaai net hawwe dy't makke waard doe't it sertifikaat opfrege waard.
-UserCertImported=Jo persoanlike sertifikaat is ynstallearre. It is ferstandig om in reservekopie fan dit sertifikaat te meitsken.
+UserCertImported=Jo persoanlike sertifikaat is ynstallearre. It is ferstandig om in reservekopy fan dit sertifikaat te meitsken.
 CertOrgUnknown=(Unbekend)
 CertNotStored=(Net Bewarre)
 CertExceptionPermanent=Foar altyd
