--- a/fy-NL/security/manager/chrome/pippki/pippki.properties
+++ b/fy-NL/security/manager/chrome/pippki/pippki.properties
@@ -87,8 +87,8 @@ resetPreferences=Br\u00FBk dizze knop om de befeiligingsfoarkarren fan %S te wer
 certVerified=Dit sertifikaat is ferifiearre foar de folgjende soarten gebr\u00FBk
 certNotVerified_CertRevoked=Dit sertifikaat koe net ferifiearre wurde omdat it werroppen is.
 certNotVerified_CertExpired=Dit sertifikaat koe net ferifiearre wurde omdat it ferr\u00FBn is.
-certNotVerified_CertNotTrusted=Dit sertifikaat koe net ferifiearre wurde omdat it net fertrouwd wurd.
-certNotVerified_IssuerNotTrusted=Dit sertifikaat koe net ferifiearre wurde omdat de \u00FAtjouwer net fertrouwd wurd.
+certNotVerified_CertNotTrusted=Dit sertifikaat koe net ferifiearre wurde omdat it net fertroud wurd.
+certNotVerified_IssuerNotTrusted=Dit sertifikaat koe net ferifiearre wurde omdat de \u00FAtjouwer net fertroud wurd.
 certNotVerified_IssuerUnknown=Dit sertifikaat koe net ferifiearre wurde omdat de \u00FAtjouwer net bekend is.
 certNotVerified_CAInvalid=Dit sertifikaat koe net ferifiearre wurde omdat it CA-sertifikaat net jildich is.
 certNotVerified_Unknown=Dit sertifikaat koe net ferifiearre wurde om \u00FBnbekende redenen.
@@ -206,11 +206,11 @@ addExceptionInvalidHeader=Dizze side probearret om sichsels te identifisearjen m
 addExceptionDomainMismatchShort=Foute Webstee
 addExceptionDomainMismatchLong=Sertifikaat heart by in oare webstee, wat wize kin op identiteitsstellerij.
 addExceptionExpiredShort=Alde Ynformaasje
-addExceptionExpiredLong=Sertifikaat is no net valide. It is net mooglik om te kontrolearjen oft dizze identiteit rappporteare is as stellen of ferdw\u00FBn.
+addExceptionExpiredLong=Sertifikaat is no net falide. It is net mooglik om te kontrolearjen oft dizze identiteit rappporteare is as stellen of ferdw\u00FBn.
 addExceptionUnverifiedShort=Unbekende Identiteit
 addExceptionUnverifiedLong=Sertifikaat is net fertroud, omdat it net ferifiearre is troch in bekende autoriteit.
 addExceptionValidShort=Goed Sertifikaat
-addExceptionValidLong=Dizze webstee jout valide, ferifiearre identifikaasje.  It is net nedich om in \u00FAts\u00FBndering ta te foegjen.
+addExceptionValidLong=Dizze webstee jout falide, ferifiearre identifikaasje.  It is net nedich om in \u00FAts\u00FBndering ta te foegjen.
 addExceptionCheckingShort=Kontroleart Ynformaasje
 addExceptionCheckingLong=Probeart om it webstee te identifisearjen...
 addExceptionNoCertShort=Gjin Ynformaasje Beskikber
