--- a/fy-NL/security/manager/chrome/pipnss/nsserrors.properties
+++ b/fy-NL/security/manager/chrome/pipnss/nsserrors.properties
@@ -7,7 +7,7 @@ SSL_ERROR_BAD_CLIENT=De tsjinner hat ferkearde gegevens \u00FBntfongen fan de cl
 SSL_ERROR_BAD_SERVER=De client hat ferkearde gegevens \u00FBntfongen fan de tsjinner.
 SSL_ERROR_UNSUPPORTED_CERTIFICATE_TYPE=Net-stipe sertifikaattype.
 SSL_ERROR_UNSUPPORTED_VERSION=Peer br\u00FBkt net-stipe ferzje fan it befeiligingsprotokol.
-SSL_ERROR_WRONG_CERTIFICATE=Clientautentiaasje mislearre: priveekaai yn kaaidatabase komt net oerien mei iepenbare kaai yn sertifikaatdatabase.
+SSL_ERROR_WRONG_CERTIFICATE=Clientautentikaasje mislearre: priveekaai yn kaaidatabase komt net oerien mei iepenbare kaai yn sertifikaatdatabase.
 SSL_ERROR_BAD_CERT_DOMAIN=Befeilige kommunikaasje mei peer net mooglik: opfrege domeinnamme komt net oerien mei it sertifikaat fan de tsjinner.
 SSL_ERROR_SSL2_DISABLED=Peer stipet allinnich SSL ferzje 2, dat lokaal \u00FAtskeakele is.
 SSL_ERROR_BAD_MAC_READ=SSL \u00FBntfong in record mei in ferkearde berjochtautentikaasjekoade.
@@ -19,7 +19,7 @@ SSL_ERROR_SSL_DISABLED=Kin net ferbine: SSL is \u00FAtskeakele.
 SSL_ERROR_FORTEZZA_PQG=Kin net ferbine: SSL-peer befindt sich yn in oar FORTEZZA-domein.
 SSL_ERROR_UNKNOWN_CIPHER_SUITE=In \u00FBnbekende SSL-kodearringsserie wurde opfrege.
 SSL_ERROR_NO_CIPHERS_SUPPORTED=Gjin kodearingsseries oanw\u00EAzich en ynskeakele yn dit programma.
-SSL_ERROR_BAD_BLOCK_PADDING=SSL \u00FBntfing in record mei ferkearde block padding.
+SSL_ERROR_BAD_BLOCK_PADDING=SSL \u00FBntfong in record mei ferkearde block padding.
 SSL_ERROR_RX_RECORD_TOO_LONG=SSL \u00FBntfong in record dat oer de maksimaal tastiene lingte hinne gie.
 SSL_ERROR_TX_RECORD_TOO_LONG=SSL probearre in record te ferstjoeren dat oer de maksimaal tastiene lingte hinne gie.
 SSL_ERROR_RX_MALFORMED_HELLO_REQUEST=SSL \u00FBntfong in \u00FBnjildich Hello Request-handshakeberjocht.
@@ -60,7 +60,7 @@ SSL_ERROR_HANDSHAKE_FAILURE_ALERT=SSL-peer koe net \u00FBnderhannelje oer in aks
 SSL_ERROR_ILLEGAL_PARAMETER_ALERT=SSL-peer fersmiet in handshakeberjocht foar \u00FBnakseptabele ynh\u00E2ld.
 SSL_ERROR_UNSUPPORTED_CERT_ALERT=SSL-peer stipet gjin sertifikaten fan it \u00FBntfongen type.
 SSL_ERROR_CERTIFICATE_UNKNOWN_ALERT=SSL-peer hie in \u00FBnbekend probleem mei it \u00FBntfongen sertifikaat.
-SSL_ERROR_GENERATE_RANDOM_FAILURE=SSL r\u00FBn tsjin in steuring yn de willekeurige-getallengenerator.
+SSL_ERROR_GENERATE_RANDOM_FAILURE=SSL r\u00FBn tsjin in steuring yn de getallengenerator.
 SSL_ERROR_SIGN_HASHES_FAILURE=Digitaal \u00FBndertekenjen fan gegevens nedich om jo sertifikaat te ferifiearjen net mooglik.
 SSL_ERROR_EXTRACT_PUBLIC_KEY_FAILURE=SSL koe de iepenbiere kaai net ekstrahearje \u00FAt it sertifikaat fan de peer.
 SSL_ERROR_SERVER_KEY_EXCHANGE_FAILURE=Net spesifisearre flater tiidens ferwurkjen fan SSL Server Key Exchange-handshake.
@@ -115,16 +115,16 @@ SEC_ERROR_INVALID_AVA=befeiligingsbibleteek: \u00FBnjildige AVA.
 SEC_ERROR_INVALID_TIME=Ferkeard opstelde tiidstring.
 SEC_ERROR_BAD_DER=befeiligingsbibleteek: ferkeard opstelde DER-kodearre berjocht.
 SEC_ERROR_BAD_SIGNATURE=Sertifikaat fan peer hat in \u00FBnjildiche \u00FBndertekening.
-SEC_ERROR_EXPIRED_CERTIFICATE=Sertifikaat fan peer is verlopen.
-SEC_ERROR_REVOKED_CERTIFICATE=Sertifikaat fan peer is ingetrokken.
-SEC_ERROR_UNKNOWN_ISSUER=Uitgever fan sertifikaat fan peer wordt niet herkend.
-SEC_ERROR_BAD_KEY=Openbare sleutel fan peer is \u00FBnjildich.
-SEC_ERROR_BAD_PASSWORD=Het ingevoerde befeiligingswachtwoord is onjuist.
-SEC_ERROR_RETRY_PASSWORD=Nieuw wachtwoord onjuist ingevoerd.  Probeer opnieuw.
+SEC_ERROR_EXPIRED_CERTIFICATE=Sertifikaat fan peer is ferr\u00FBn.
+SEC_ERROR_REVOKED_CERTIFICATE=Sertifikaat fan peer is ynlutsen.
+SEC_ERROR_UNKNOWN_ISSUER=Utjouwer fan sertifikaat fan peer wurdt net werkend.
+SEC_ERROR_BAD_KEY=Iepenbiere kaai fan peer is \u00FBnjildich.
+SEC_ERROR_BAD_PASSWORD=It ynfierde befeiligingswachtwurd is net goed.
+SEC_ERROR_RETRY_PASSWORD=Nij wachtwurd net goed ynfierd.  Probearje op 'e nij.
 SEC_ERROR_NO_NODELOCK=befeiligingsbibleteek: gjin nodelock.
 SEC_ERROR_BAD_DATABASE=befeiligingsbibleteek: ferkearde database.
-SEC_ERROR_NO_MEMORY=befeiligingsbibleteek: geheugentoewijzingsflater.
-SEC_ERROR_UNTRUSTED_ISSUER=Sertifikaatuitgever fan peer is aangemerkt als niet vertrouwd door de gebruiker.
+SEC_ERROR_NO_MEMORY=befeiligingsbibleteek: \u00FBnth\u00E2ldtawizingsflater.
+SEC_ERROR_UNTRUSTED_ISSUER=Sertifikaat\u00FAtjouwer fan peer is oanmerke as net fertroud troch de br\u00FBker.
 SEC_ERROR_UNTRUSTED_CERT=Sertifikaat fan peer is oanmerkt as net fertroud troch de br\u00FBker.
 SEC_ERROR_DUPLICATE_CERT=Sertifikaat bestiat al yn jo database.
 SEC_ERROR_DUPLICATE_CERT_NAME=Namme fan ynladen sertifikaat komt al foar yn jo database.
@@ -154,7 +154,7 @@ SEC_ERROR_PKCS7_KEYALG_MISMATCH=Kin net fersiferje: kaaikodearingsalgoritme komt
 SEC_ERROR_PKCS7_BAD_SIGNATURE=Undertekeningsferifikaasje mislearre: gjin \u00FBndertekenaar f\u00FBn, te folle \u00FBndertekenaars f\u00FBn, of ferkearde of skansearr gegevens.
 SEC_ERROR_UNSUPPORTED_KEYALG=Net-stipe of \u00FBnbekend kaai-algoritme.
 SEC_ERROR_DECRYPTION_DISALLOWED=Kin net dekodearje: fersifere mei help fan in net-tastien algoritme of kaaigrutte.
-XP_SEC_FORTEZZA_BAD_CARD=Fortezza-kaart is net goed ynisjalisearre.  Smit de kaart fuort en retourneer dizze nei jo \u00FAtjouwer.
+XP_SEC_FORTEZZA_BAD_CARD=Fortezza-kaart is net goed ynisjalisearre.  Smyt de kaart fuort en retourneer dizze nei jo \u00FAtjouwer.
 XP_SEC_FORTEZZA_NO_CARD=Gjin Fortezza-kaarten f\u00FBn
 XP_SEC_FORTEZZA_NONE_SELECTED=Gjin Fortezza-kaart selektearre
 XP_SEC_FORTEZZA_MORE_INFO=Selektear in persoan om mear ynformaasje oer te krijen
@@ -215,7 +215,7 @@ SEC_ERROR_JS_INVALID_DLL=Unjildich modulepaad/-best\u00E2nsnamme
 SEC_ERROR_JS_ADD_MOD_FAILURE=Kin module net tafoegje
 SEC_ERROR_JS_DEL_MOD_FAILURE=Kin module net fuortsmite
 SEC_ERROR_OLD_KRL=Nije KRL is net resinter as de aktuele.
-SEC_ERROR_CKL_CONFLICT=Nije CKL hat oare \u00FAtjouwer as aktuele CKL.  Smit aktuele CKL fuort.
+SEC_ERROR_CKL_CONFLICT=Nije CKL hat oare \u00FAtjouwer as aktuele CKL.  Smyt aktuele CKL fuort.
 SEC_ERROR_CERT_NOT_IN_NAME_SPACE=De sertifikaasjeautoriteit foar dit sertifikaat is net machtige in sertifikaat mei dizze namme \u00FAt te jaan.
 SEC_ERROR_KRL_NOT_YET_VALID=De kaaiwerroppingslist foar dit sertifikaat is noch net jildich.
 SEC_ERROR_CRL_NOT_YET_VALID=De sertifikaatwerroppingslist foar dit sertifikaat is noch net jildich.
