fixed several wrong words in toolkitfiles for consistency

--- a/fy-NL/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/fy-NL/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -90,7 +90,7 @@ stateCanceled=Annulearre
 stateBlocked=Blokkeard troch alders tafersjoch
 stateDirty=Blokkearre: Ynladen best\u00E2n kin in firus of spyware befatte
 # LOCALIZATION NOTE (stateBlockedPolicy): 'Security Zone Policy' should be capitalized 
- stateBlockedPolicy=Dit ynladen is blokkearre troch jo feilichheids soane ynstelling
+ stateBlockedPolicy=Dit ynladen is blokkearre troch jo feilichheidss\u00F4ne ynstelling
 
 # LOCALIZATION NOTE (yesterday): Displayed time for files finished yesterday
 yesterday=Juster
