--- a/fy-NL/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/fy-NL/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -75,8 +75,8 @@ malformedTitle=Net-goed opsteld best\u00E2n
 malformedRegistrationTitle=Chrome-registraasje is mislearre
 malformedRegistrationMessage=%S koe dit item net ynstallearje fanwege in flater yn de chrome-registraasje. Nim kontakt op mei de makker oer dit probleem.
 
-invalidFileExtTitle=Unjildige best\u00E2nstaheaksel
-invalidFileExtMessage="%S" koe net ynstallearre wurde omdat dit item in \u00FBnjildige best\u00E2nstaheaksel hat (%S is gjin jildige best\u00E2nstaheaksel foar in %S). Nim kontakt op mei de makker oer dit probleem.
+invalidFileExtTitle=Unjildige best\u00E2nsbylage
+invalidFileExtMessage="%S" koe net ynstallearre wurde omdat dit item in \u00FBnjildige best\u00E2nsbylage hat (%S is gjin jildige best\u00E2nstaheaksel foar in %S). Nim kontakt op mei de makker oer dit probleem.
 missingPackageFilesTitle=Untbrekkende ynstallaasjebestannen
 missingPackageFilesMessage="%S" koe net ynstallearre wurde omdat it gjin jildich pakket befat (in %S moat op syn minst ien \u00FAtwreiding of tema ha). Nim kontakt op mei de makker oer dit probleem.
 
@@ -102,8 +102,8 @@ safeModeMsg=Alle tafoegings binne \u00FAtskeakele troch de feilige modus.
 disabledCompatMsg=Kompatibiliteitskontr\u00F4le foar tafoegings is \u00FAtskeakele. Jo soene ynkompatibele tafoegings hawwe kinne.
 disabledUpdateSecurityMsg=Tafoegingsfernijing feiligheidskontrole is \u00FAtskeakele. Jo kinne in feiligheidsrisiko rinne troch fernijings.
 noUpdatesMsg=Der binne gjin fernijings f\u00FBn.
-offlineUpdateMsg2=%S is op dit stuit yn modus s\u00FBnder ferbining en net yn steat tafoegings by te wurkjen. Klik op Gean online en probearje it op 'e nij.
-offlineSearchMsg=%S is op dit stuit yn modus s\u00FBnder ferbining en net yn steat om te sykjen nei tafoegings. Klik Gean online en probearje it op 'e nij.
+offlineUpdateMsg2=%S is op dit stuit yn moadus s\u00FBnder ferbining en net yn steat tafoegings by te wurkjen. Klik op Gean online en probearje it op 'e nij.
+offlineSearchMsg=%S is op dit stuit yn moadus s\u00FBnder ferbining en net yn steat om te sykjen nei tafoegings. Klik Gean online en probearje it op 'e nij.
 enableButtonLabel=Ynskeakelje
 enableButtonAccesskey=n
 goOnlineButtonLabel=Gean online
@@ -112,6 +112,6 @@ goOnlineButtonAccesskey=G
 newUpdateWindowTitle=Fernijings foar %S-tafoegings
 newUpdatesAvailableMsg=Der binne nije fernijings beskikber foar jo tafoegings.
 
-searchResults=Sjoch alle risseltaten (%S)
+searchResults=Sjoch alle resultaten (%S)
 
 eulaHeader=It is nedich dat jo de folgjende Ein Br\u00FBkers Lisinsje Oerienkomst fan %S akseptearje eardat de ynstallaasje trochgean kin:
