--- a/he/mail/chrome/messenger/activity.properties
+++ b/he/mail/chrome/messenger/activity.properties
@@ -1,12 +1,13 @@
-# LOCALIZATION NOTE (seconds, minutes, hours, days): Semi-colon list of plural
-# forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-seconds=שניה;שניות
-minutes=דקה;דקות
-hours=שעה;שעות
-days=יום;ימים
+### # LOCALIZATION NOTE (seconds, minutes, hours, days): Semi-colon list of plural
+### # forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+###seconds=שניה;שניות
+###minutes=דקה;דקות
+###hours=שעה;שעות
+###days=יום;ימים
 
 # Status Text
-paused=מושהה.
+###paused=מושהה.
+paused2=מושהה
 processing=מעבד
 notStarted=לא התחיל
 failed=נכשל
@@ -14,8 +15,8 @@ waitingForInput=ממתין לקלט
 waitingForRetry=ממתין לנסיון חוזר
 completed=הושלם
 canceled=בוטל
-cannotPause=פעילות זו לא יכולה להיות מושהת
-autoRetry=מנסה שוב בעוד %S שניות
+###cannotPause=פעילות זו לא יכולה להיות מושהת
+###autoRetry=מנסה שוב בעוד %S שניות
 
 # LOCALIZATION NOTE (yesterday): Displayed time for files finished yesterday
 yesterday=אתמול
