--- a/fr/mail/chrome/messenger/messenger.properties
+++ b/fr/mail/chrome/messenger/messenger.properties
@@ -341,6 +341,16 @@ fromSearchCriteria=Le sujet ou l'expéditeur contient :
 biffNotification_message=a %1$S nouveau message.
 biffNotification_messages=a %1$S nouveaux messages.
 
+# LOCALIZATION NOTE(macBiffNotification is Mac only):
+#  %1$S is the number of new messages
+#  %2$S is a list of names and/or email addresses separated by biffNotification_separator
+#  %3$S is the number of new messages not displayed in the biff alert
+macBiffNotification_message=%1$S nouveau message de %2$S.
+macBiffNotification_messages=%1$S nouveaux messages de %2$S.
+macBiffNotification_messages_extra=%1$S nouveaux messages de %2$S et %3$S autre(s).
+# Used to separate names/email addresses in a list.  Note the trailing space ', '
+macBiffNotification_separator=,\u0020
+
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S sur %S Ko utilisés
 quotaPercentUsed=%S%% utilisés
