Bug 476698 Activity Manager: report on 'send later' progress - part 1 basic support for send later progress.

--- a/fr/mail/chrome/messenger/activity.properties
+++ b/fr/mail/chrome/messenger/activity.properties
@@ -12,3 +12,14 @@ canceled=Annulée
 yesterday=Hier
 # LOCALIZATION NOTE (monthDate): #1 month name; #2 date number; e.g., January 22
 monthDate=#2 #1
+
+# Send Message
+sendingMessage=Envoi d'un message
+# LOCALIZATION NOTE (sendingMessageTo): %S will be replaced by the first name or newsgroup that the message is being sent to.
+sendingMessageTo=Envoi d'un message à %S
+sentMessage=Message envoyé
+# LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
+sentMessageTo=Message envoyé à %S
+failedToSendMessage=Échec d'envoi d'un message
+# LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
+failedToSendMessageTo=Échec d'envoi d'un message à %S
