localize untranslated venkman strings

--- a/pl/extensions/venkman/chrome/venkman.properties
+++ b/pl/extensions/venkman/chrome/venkman.properties
@@ -69,7 +69,7 @@ err.required.param=Brak wymaganego parametru %1$S
 err.invalid.param=Niewłaściwa wartość dla parametru %1$S (%2$S)
 # 1 url, 2 fileName, 3 lineNumber, 4 reason
 err.subscript.load=Błąd podczas ładowania podskryptu z <%1$S>.
-err.no.debugger=JS Debugger Service is not installed. (Perhaps this application was built [see about:buildconfig] with --disable-jsd, which suppresses building core support required for Venkman. You can resolve this by recompiling without that option or complaining to your vendor [who shouldn't be using that flag].)
+err.no.debugger=Usługa JS Debuger nie jest zainstalowana. (Aplikacja została prawdopodobnie skompliowana z użyciem --disable-jsd [patrz: about:buildconfig], przez co nie obsługuje rozszerzenia Venkman. Problem można rozwiązać rekompilując program bez użycia tej opcji bądź poprzez zgłoszenie tego problemu wydawcy tego programu [który nie powinien używać tej opcji].)
 err.failure=Operacja nie powiodła się: %1$S
 err.no.stack=Brak stosu
 
@@ -606,7 +606,7 @@ cmd.dumpprofile.params=[<file-name>]
 cmd.dumptree.params=<tree> [<depth>]
 
 cmd.emode.params=[<mode>]
-cmd.emode.help=Sets what action the debugger should take when an error occurs in the debug target. |emode ignore| ignores all errors, |emode trace| shows a log of the error in the console, and |emode break| stops execution when an error is thrown. |emode| without any parameter will display the current error mode. Note that |emode| controls what happens when an exception goes uncaught, to control what happens when an exception is *thrown*, use |tmode|.
+cmd.emode.help=Określa zachowanie się debuggera po napotkaniu błędu. Komenda |emode ignore| ignoruje wszystkie błędy, |emode trace| wyświetla dziennik błędu w konsoli, a |emode break| zatrzymuje program gdy wystąpi błąd. Polecenie |emode| bez parametru wyświetla bieżący tryb błędów. Polecenie |emode| określa zachowanie dla niezłapanych wyjątków. Aby określić akcję po przechwyceniu wyjątku, należy użyć komendy |tmode|.
 
 cmd.eval.params=<expression>
 cmd.eval.help=Wykonuje <wyrażenie> w zakresie bieżącej ramki debugowanego obiektu. Zobacz również: |frame|, |where|, |props|, oraz |evald|.
@@ -897,7 +897,7 @@ cmd.this-expr.params=<expression>
 cmd.this-expr.help=Ustawia "wykonywany obiekt" na wynik wyrażenia <expression>. Wykonywany obiekt |this| zostanie obiektem określonym przez zmienną |this| we wszystkich fazach wykonywania. Wynik wyrażenia <expression> *musi* być obiektem. Zobacz również: |eval|, |props|, |watch-expr|, oraz |set-this-obj|.
 
 cmd.tmode.params=[<mode>]
-cmd.tmode.help=Sets what action the debugger should take when an exception is thrown from the debug target. |tmode ignore| ignores all exceptions, |tmode trace| shows a log of the exception to the console, and |tmode break| stops execution when an exception is thrown. |tmode| without any parameter will display the current throw mode. Note that |tmode| controls what happens when an exception is *thrown*, to control what happens when an exception reaches the top level and becomes an error, use |emode|. The key combination Control + T can be used to cycle the throw mode.
+cmd.tmode.help=Ustala domyślną czynność, jaka zostanie wykonana, gdy w debugowanym obiekcie zostanie przechwycony wyjątek. Komenda |tmode ignore| spowoduje, że wszystkie wyjątki będą ignorowane, |tmode trace| wyświetli dziennik wyjątku na konsoli, |tmode break| spowoduje przerwanie debugowania w momencie przechwycenia wyjątku. Komenda |tmode| wprowadzona bez parametru wyświetli aktualnie wybrany tryb obsługi wyjątków. Proszę pamiętać, że komenda |tmode| kontroluje zdarzenie gdy *wystąpi* wyjątek, aby kontrolować zdarzenia, gdy wyjątek osiąga najwyższy poziom i staje się błędem, proszę użyć komendy |emode|. Naciśnięcie kombinacji przycisków Ctrl+T powoduje przełączenie się pomiędzy dostępnymi trybami obsługi wyjątków.
 
 cmd.tm-break.label=Zatrzymaj, gdy wystąpi &wyjątek
 cmd.tm-cycle.label=Przełącz tryb obsługi wyjątków
